--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ ave_period = 120
 
 #This specifies the location of the weather station. 
 #Please add your own location here.
-loc = BV Deep Moor
+loc = Your location
 
 #This specifies the barometric factor algorithm is used.
 #The baro_factor function sources are listed with the functions in the...
@@ -51,7 +51,7 @@ alg = default
 
 #This specifies the url_destination that the data is being sent to.
 #add in your own url destination.
-url_dest = http://rocserver/weather_incoming/
+url_dest = your url
 
 #This specifies the elevation of the station to allow for calculation...
 #of the baro_factor. The elevation is given in meters.
@@ -62,10 +62,10 @@ Elevation = 640
 WU_url = http://weatherstation.wunderground.com/weatherstation/updateweatherstation.php?
 
 #This specifies the PWS from weather underground.
-WU_id = KIDBAYVI5 
+WU_id = PWS ID 
 
 #This specifies the password from weather underground.
-WU_pswd = 57ford
+WU_pswd = your password
 
 #This specifies the time of the upload.
 date_str = &dateutc=now
@@ -114,7 +114,7 @@ UV = None
 
 
 #largest wind gust over 10 minutes
-windgustmph_10m = 10
+windgustmph_10m = None
 
 #wind gust direction over last 10 minutes
 windgustdir_10m = None
