--- a/settings.ini
+++ b/settings.ini
@@ -108,109 +108,115 @@ action_str = &action=updateraw
 #WeatherUtils equation, into this file so new user knows the order of the output and the next available list item,...
 #without having to look it up in the weather_utils.py file.
 
+#Please note that I have made all of the weather measurements below that I do not want added to the Eng_data dictionary into to string 
+#like syntax, this allows for python to evaluate each of the measurements and determine whether or not to add it to the dictionary.
+
+#Another important thing to note is that the weather and clouds inputs are text therefore the user should always send these as such. 
+
+
 
 #UV equation.- [index]
-UV = None
+UV = 'None'
 
 
 #largest wind gust over 10 minutes
-windgustmph_10m = None
+windgustmph_10m = 'None'
 
 #wind gust direction over last 10 minutes
-windgustdir_10m = None
+windgustdir_10m = 'None'
 
 #weather - [text] --metar style (+RA)
 #if entering text put into a string in ini file. ex. weather = 'Hot'
-weather = None
+weather = 'None'
 
 #clouds- [text] --SKC, FEW, SCT, BKN, OVC
 #if entering text put into a string in ini file. ex. clouds = 'FEW'
-clouds = None
+clouds = 'None'
 
 #soiltempf- [F soil temperature] -- for sensors 2, 3, 4 use soiltemp2f...
 # soiltemp3f and soiltemp4f.
-soiltempf = None
+soiltempf = 'None'
 
 #soilmoisture- [%] -- up to four sensors can be added using the...
 # convention seen above.
-soilmoisture = None
+soilmoisture = 'None'
 
 #leafwetness - [%] -- can use two sensors following naming convention...
 # seen above.
-leafwetness = None
+leafwetness = 'None'
 
 #rainin- [rain inches over the past hour] -- accumulated rain over the...
 # past 60 minutes.
-rainin = None
+rainin = 'None'
 
 #dailyrainin- [rain in inches in local time]
-dailyrainin = None
+dailyrainin = 'None'
 
 #visibility- [nm visibility] -nm(nautical mile)
-visibility = None
+visibility = 'None'
 
 #indoortempf- [F indoor temperature]
-indoortempf = None
+indoortempf = 'None'
 
 #indoorhumidity- [% indoor humidity 0-100]
-indoorhumidity = None
+indoorhumidity = 'None'
 
 #AqNO- [NO (nitric oxide) ppb]
-AqNO = None
+AqNO = 'None'
 
 #AqNO2T- (nitrogen dioxide), true measure ppb
-AqNO2T = None
+AqNO2T = 'None'
 
 #AqNO2- NO2 computed, NOx-NO ppb
-AqNO2 = None
+AqNO2 = 'None'
 
 #AqNO2Y- NO2 computed, NOy-NO ppb
-AqNO2Y = None
+AqNO2Y = 'None'
 
 #AqNOX- NOx (nitrogen oxides) -ppb
-AqNOX = None
+AqNOX = 'None'
 
 #AqNOY- (total reactive nitrogen) -ppb
-AqNOY = None
+AqNOY = 'None'
 
 #AqNO3- NO3 ion - (nitrate, not adjusted for ammonium ion) UG/M3
-AqNO3 = None
+AqNO3 = 'None'
 
 #AqSO4- SO4 ion - (sulfate, not adjusted for ammonium ion) UG/M3
-AqSO4 = None
+AqSO4 = 'None'
 
 #AqSO2- (sulfur dioxide), conventional ppm
-AqSO2 = None
+AqSO2 = 'None'
 
 #AqSO2T- (sulfur dioxide), conventional ppm
-AqSO2T = None
+AqSO2T = 'None'
 
 #AqCO - CO - (carbon monoxide), conventional ppm
-AqCO = None
+AqCO = 'None'
 
 #AqCOT- CO trace levels ppb
-AqCOT = None
+AqCOT = 'None'
 
 #AqEC - EC(elemental carbon) - PM2.5 UG/M3
-AqEC = None
+AqEC = 'None'
 
 #AqOC- OC(organic carbon, not adjusted for oxygen and hydrogen)-PM2.5 UG/M3
-AqOC = None
+AqOC = 'None'
 
 #AqBC- BC(black carbon at 880nm) UG/M3
-AqBC = None
+AqBC = 'None'
 
 #AqUV-AETH- UV-AETH (2nd channel of Aethalometer at 370 nm) UG/M3
-AqUV-AETH = None
+AqUV-AETH = 'None'
 
 #AqPM2.5- PM2.5 mass
-AqPM2.5 = None
+AqPM2.5 = 'None'
 
 #AqPM10- PM10 mass
-AqPM10 = None
+AqPM10 = 'None'
 
 #AqOZONE- Ozone -ppb
-AqOZONE = None
+AqOZONE = 'None'
 
 #--------------------Important Notes------------------------------------
 ##
