--- a/settings.ini
+++ b/settings.ini
@@ -108,12 +108,16 @@ action_str = &action=updateraw
 #WeatherUtils equation, into this file so new user knows the order of the output and the next available list item,...
 #without having to look it up in the weather_utils.py file.
 
-#Please note that I have made all of the weather measurements below that I do not want added to the Eng_data dictionary into to string 
-#like syntax, this allows for python to evaluate each of the measurements and determine whether or not to add it to the dictionary.
+###Please note that I have made all of the weather measurements below that I do not want added to the Eng_data dictionary into to string 
+###like syntax, this allows for python to evaluate each of the measurements and determine whether or not to add it to the dictionary.
 
-#Another important thing to note is that the weather and clouds inputs are text therefore the user should always send these as such. 
+###Another important thing to note is that the weather and clouds inputs are text therefore the user should always send these as such. 
 
+### Also note that the original lists for ASCII and NMEA have the following 
+### lengths, and next available indexes. I would recommend changing this
+### if and when you add an additional equation to the output. 
 
+### MAKE SURE TO ENTER NEW EQUATIONS THAT PULL FROM LISTS AS units[index].
 
 #UV equation.- [index]
 UV = 'None'
