--- a/settings.ini
+++ b/settings.ini
@@ -113,11 +113,30 @@ action_str = &action=updateraw
 
 ###Another important thing to note is that the weather and clouds inputs are text therefore the user should always send these as such. 
 
+### MAKE SURE TO ENTER NEW EQUATIONS THAT PULL FROM LISTS AS units[index].
+
 ### Also note that the original lists for ASCII and NMEA have the following 
 ### lengths, and next available indexes. I would recommend changing this
 ### if and when you add an additional equation to the output. 
 
-### MAKE SURE TO ENTER NEW EQUATIONS THAT PULL FROM LISTS AS units[index].
+## Current ASCII List Length == 7
+## NEXT available ASCII list index == 7
+##
+
+## Current ASCII_L List Length == 7
+## NEXT available ASCII list index == 7
+
+## Current NMEA List Length == 5
+## NEXT available NMEA list index == 5
+
+## Current NMEA_L List Length == 5 
+## NEXT available NMEA list index == 5
+
+## IMPORTANT -----------------------------------------------------------------
+
+##NMEA_L and ASCII_L are built with the intention of allowing the user to add 
+## an additional weather measurement that is not coming from Young's Weather
+## Station Board. 
 
 #UV equation.- [index]
 UV = 'None'
