--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ ave_period = 120
 
 #This specifies the location of the weather station. 
 #Please add your own location here.
-loc = Your location
+loc = BV Deep Moor
 
 #This specifies the barometric factor algorithm is used.
 #The baro_factor function sources are listed with the functions in the...
@@ -51,7 +51,7 @@ alg = default
 
 #This specifies the url_destination that the data is being sent to.
 #add in your own url destination.
-url_dest = your url
+url_dest = http://rocserver/weather_incoming/
 
 #This specifies the elevation of the station to allow for calculation...
 #of the baro_factor. The elevation is given in meters.
@@ -62,10 +62,10 @@ Elevation = 640
 WU_url = http://weatherstation.wunderground.com/weatherstation/updateweatherstation.php?
 
 #This specifies the PWS from weather underground.
-WU_id = PWS ID 
+WU_id = KIDBAYVI5 
 
 #This specifies the password from weather underground.
-WU_pswd = your password
+WU_pswd = 57ford
 
 #This specifies the time of the upload.
 date_str = &dateutc=now
@@ -93,27 +93,10 @@ action_str = &action=updateraw
 ##
 ##*****dew point***** is also calculated using the humidity and...
 ## temperature of air.
+###---------------------------------------------------------------------
 
-[Equations]
-#Allows the user of the program to add additional equations for weather...
-#measurements that are not included in the outputs of the Young's weather.
-#weather station at this moment in time.
-#
-#
-#If the equation is not on your output then simply set it equal to 'None'
-#For proper upload to weather undergrounds website the keys are given below ...
-#simply need to be set equal to themselves(i.e. UV = UV). 
-#
-#will need to add in the base number of calculations made by the ...
-#WeatherUtils equation, into this file so new user knows the order of the output and the next available list item,...
-#without having to look it up in the weather_utils.py file.
 
-###Please note that I have made all of the weather measurements below that I do not want added to the Eng_data dictionary into to string 
-###like syntax, this allows for python to evaluate each of the measurements and determine whether or not to add it to the dictionary.
-
-###Another important thing to note is that the weather and clouds inputs are text therefore the user should always send these as such. 
-
-### MAKE SURE TO ENTER NEW EQUATIONS THAT PULL FROM LISTS AS units[index].
+###---------------------------------------------------------------------
 
 ### Also note that the original lists for ASCII and NMEA have the following 
 ### lengths, and next available indexes. I would recommend changing this
@@ -132,114 +115,85 @@ action_str = &action=updateraw
 ## Current NMEA_L List Length == 5 
 ## NEXT available NMEA list index == 5
 
-## IMPORTANT -----------------------------------------------------------------
+## IMPORTANT NOTES FOR WUNDERGROUND UPLOAD------------------------------
 
-##NMEA_L and ASCII_L are built with the intention of allowing the user to add 
-## an additional weather measurement that is not coming from Young's Weather
-## Station Board. 
+##The user has the prerogative to add equations to the engineering 
+## dictionary output. Below is a list of all the accept inputs for 
+## Wunderground.
 
-#UV equation.- [index]
-UV = 'None'
+#UV- [index]
 
+#windgustmph_10m -largest wind gust over 10 minute period 
 
-#largest wind gust over 10 minutes
-windgustmph_10m = 'None'
-
-#wind gust direction over last 10 minutes
-windgustdir_10m = 'None'
+#windgustdir_10m - wind gust direction over last 10 minutes
 
 #weather - [text] --metar style (+RA)
-#if entering text put into a string in ini file. ex. weather = 'Hot'
-weather = 'None'
 
 #clouds- [text] --SKC, FEW, SCT, BKN, OVC
-#if entering text put into a string in ini file. ex. clouds = 'FEW'
-clouds = 'None'
+
 
 #soiltempf- [F soil temperature] -- for sensors 2, 3, 4 use soiltemp2f...
 # soiltemp3f and soiltemp4f.
-soiltempf = 'None'
 
 #soilmoisture- [%] -- up to four sensors can be added using the...
 # convention seen above.
-soilmoisture = 'None'
 
 #leafwetness - [%] -- can use two sensors following naming convention...
 # seen above.
-leafwetness = 'None'
 
 #rainin- [rain inches over the past hour] -- accumulated rain over the...
 # past 60 minutes.
-rainin = 'None'
 
 #dailyrainin- [rain in inches in local time]
-dailyrainin = 'None'
 
 #visibility- [nm visibility] -nm(nautical mile)
-visibility = 'None'
 
 #indoortempf- [F indoor temperature]
-indoortempf = 'None'
 
 #indoorhumidity- [% indoor humidity 0-100]
-indoorhumidity = 'None'
 
 #AqNO- [NO (nitric oxide) ppb]
-AqNO = 'None'
 
 #AqNO2T- (nitrogen dioxide), true measure ppb
-AqNO2T = 'None'
 
 #AqNO2- NO2 computed, NOx-NO ppb
-AqNO2 = 'None'
 
 #AqNO2Y- NO2 computed, NOy-NO ppb
-AqNO2Y = 'None'
 
 #AqNOX- NOx (nitrogen oxides) -ppb
-AqNOX = 'None'
 
 #AqNOY- (total reactive nitrogen) -ppb
-AqNOY = 'None'
 
 #AqNO3- NO3 ion - (nitrate, not adjusted for ammonium ion) UG/M3
-AqNO3 = 'None'
 
 #AqSO4- SO4 ion - (sulfate, not adjusted for ammonium ion) UG/M3
-AqSO4 = 'None'
 
 #AqSO2- (sulfur dioxide), conventional ppm
-AqSO2 = 'None'
 
 #AqSO2T- (sulfur dioxide), conventional ppm
-AqSO2T = 'None'
 
 #AqCO - CO - (carbon monoxide), conventional ppm
-AqCO = 'None'
 
 #AqCOT- CO trace levels ppb
-AqCOT = 'None'
 
 #AqEC - EC(elemental carbon) - PM2.5 UG/M3
-AqEC = 'None'
 
 #AqOC- OC(organic carbon, not adjusted for oxygen and hydrogen)-PM2.5 UG/M3
-AqOC = 'None'
 
 #AqBC- BC(black carbon at 880nm) UG/M3
-AqBC = 'None'
 
 #AqUV-AETH- UV-AETH (2nd channel of Aethalometer at 370 nm) UG/M3
-AqUV-AETH = 'None'
 
 #AqPM2.5- PM2.5 mass
-AqPM2.5 = 'None'
 
 #AqPM10- PM10 mass
-AqPM10 = 'None'
 
 #AqOZONE- Ozone -ppb
-AqOZONE = 'None'
+
+###---------------------------------------------------------------------
+
+
+
 
 #--------------------Important Notes------------------------------------
 ##
